--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeremy Fischer's Portfolio</title>
+    <link rel="icon" href="favicon.png">
 </head>
 
 <body>
